# Z-Brownfield-Cartographer

./: .gitignore  FINAL_REPORT.md  INTERIM_REPORT.md  README.md  RECONNAISSANCE.md  pyproject.toml
.cartography/: lineage_graph.json  module_graph.json  run_summary.json
.cursor/: mcp.json
.cursor/rules/: agent.mdc
brownfield_cartographer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: cli.py  orchestrator.py  utils.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  python_data_flow.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: knowledge_graph.py
src/llm/: openai_client.py
src/models/: __init__.py  graphs.py  nodes.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/types/: cytoscape-fcose.d.ts
web/src/ui/: App.tsx  styles.css  types.ts
web/src/ui/graph/: GraphView.tsx  buildElements.ts
